Refactoring. Migration from java 9 to java 8